@@ -120,6 +120,8 @@ normally runs silently, except for warning and error messages. This option
 makes it print a list of the operations it performs on each image.
 
 .SH RETURN VALUE
-returns 0 on success and non-zero on error.
+returns 0 on success and non-zero on error. Error can mean one or more
+conversions failed.
+
 .SH SEE ALSO
 vipsheader(1)
